--- a/index.html
+++ b/index.html
@@ -23,45 +23,91 @@
   <section class="About d-flex align-items-center">
     <div class="container">
       <h2>About me</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <div>I am Computer Engineer and I’m looking for an opportunity Web Development Field as Front End Developer.</div>
     </div>
   </section>
 
   <!-- Experiences -->
 
 
-  <section class="Experiences">
+  <section class="Experiences d-flex align-items-center">
     <div class="container">
       <h2>Experiences</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
-    </div>
+      <div>
+        <h5>07/2018 – 10/2018</h5>
+        <h4>TECHNICAL SUPPORT, XCEED</h4>
+        <p>Technical Support Representative.</p>
+      </div>
+      <div>
+        <h5>01/2019 – </h5>
+        <h4>SECOND LEVEL SUPPORT SPECIALIST, TELECOM EGYPT</h4>
+        <p>Technical Support Specialist Follow Up.</p>
+      </div>
   </section>
 
   <!-- Education -->
 
 
-  <section class="Education align-items-center d-flex justify-content-center flex-column">
+  <section class="Education d-flex align-items-center">
     <div class="container">
-      <h2>Experiences</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <div>
+        <h5>7/2016</h5>
+        <h4>BACHELOR OF ENGINEERING, HELWAN UNIVERSITY</h4>
+        <p>Good degree at Computer Department.</p>
+      </div>
     </div>
   </section>
   <!-- Skills -->
 
 
-  <section class="Skills align-items-center d-flex justify-content-center flex-column">
+  <section class="Skills d-flex align-items-center">
     <div class="container">
-      <h2>Experiences</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <h2>Skills</h2>
+      <div class="row">
+        <div class="first col-sm-6">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+        <div class="second col-sm-6">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Activities -->
 
 
-  <section class="Activities align-items-center d-flex justify-content-center flex-column">
+  <section class="Activities d-flex align-items-center">
     <div class="container">
-      <h2>Experiences</h2>
+      <h2>Activities</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
     </div>
   </section>
@@ -69,9 +115,9 @@
   <!-- Contacts -->
 
 
-  <section class="Contacts align-items-center d-flex justify-content-center flex-column">
+  <section class="Contacts d-flex align-items-center">
     <div class="container">
-      <h2>Experiences</h2>
+      <h2>Contacts</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
     </div>
   </section>
@@ -79,9 +125,9 @@
   <!-- Footer -->
 
 
-  <footer class="Footer align-items-center d-flex justify-content-center flex-column">
+  <footer class="Footer d-flex align-items-center">
     <div class="container">
-      <h2>Experiences</h2>
+      <h2>Copy Rights</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
     </div>
   </footer>
