--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <section class="Education d-flex align-items-center">
     <div class="container">
       <div>
+        <h2>Edycation</h2>
         <h5>7/2016</h5>
         <h4>BACHELOR OF ENGINEERING, HELWAN UNIVERSITY</h4>
         <p>Good degree at Computer Department.</p>
@@ -66,36 +67,36 @@
       <div class="row">
         <div class="first col-sm-6">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">HTML</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">CSS</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">JQuery</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Bootstrap</div>
           </div>
         </div>
         <div class="second col-sm-6">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Scss</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Angular</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Vue</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Php</div>
           </div>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">MySql</div>
           </div>
         </div>
       </div>
@@ -108,7 +109,11 @@
   <section class="Activities d-flex align-items-center">
     <div class="container">
       <h2>Activities</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <div>
+        <h3>Pixels Student activity</h3>
+        <p>Working as Decorator and Organizer and Recieption</p>
+        <h4>08/2014 : 08/2016</h4>
+      </div>
     </div>
   </section>
 
@@ -118,7 +123,11 @@
   <section class="Contacts d-flex align-items-center">
     <div class="container">
       <h2>Contacts</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <div>
+        <h5>Facebook: <a href="https://www.facebook.com/AbdulazizMaysara" target="_blank">https://www.facebook.com/AbdulazizMaysara</a></h5>
+        <h5>LinkedIn: <a href="https://www.linkedin.com/in/abdelaziz-maysara/" target="_blank">https://www.linkedin.com/in/abdelaziz-maysara/</a></h5>
+        <h5>GitHub: <a href="https://github.com/PrinceZezo" target="_blank">https://github.com/PrinceZezo</a></h5>
+      </div>
     </div>
   </section>
 
@@ -128,7 +137,7 @@
   <footer class="Footer d-flex align-items-center">
     <div class="container">
       <h2>Copy Rights</h2>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aliquam architecto voluptatem omnis explicabo, aut dolor accusamus incidunt eum odit! Nihil aliquid vero deleniti sit in rem, nulla quas repellendus.</div>
+      <div>This simple website is made by AbdelAziz Maysara with copy rights reserved.</div>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
